Add more talking

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,8 @@
         <p>Out of ideas? Use one of our examples!</p>
         <p>Demo our algorithm! Enter text below or enter an ID and hit
         <em>Check!</em></p>
+        <p>You can also test other tools and services we survayed as a
+        baseline that we hope to beat.</p>
       </div>
       <form id="user-entry" class="col-md-8">
         <label for="algorithm">Algorithm</label>
