Add example generation button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
           <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
           Check!
         </button>
-        <button type="button" class="btn btn-default">
+        <button id="example" type="button" class="btn btn-default">
           Generate example
         </button>
       </form>
