--- a/src/righter/web/static/index.html
+++ b/src/righter/web/static/index.html
@@ -49,13 +49,12 @@
       <form id="user-entry" class="col-md-8">
         <label for="algorithm">Algorithm</label>
         <select class="form-control" id="algorithm">
-          <option value="pyencnant-aspell">Pyenchant &amp; aspell</option>
-          <option value="pyenchant-hunspell">Pyenchant &amp; hunspell</option>
-          <option value="grammarly">Grammarly</option>
-          <option value="ginger">Ginger</option>
-          <option value="language-tool">Language Tool</option>
-          <option value="whitesmoke">Whitesmoke</option>
           <option value="righter" selected>Righter</option>
+          <option value="ginger">Ginger</option>
+          <option value="grammarly">Grammarly</option>
+          <option value="language-tool">Language Tool</option>
+          <option value="pyenchant">Pyenchant</option>
+          <option value="whitesmoke">Whitesmoke</option>
         </select>
         <label for="id">Document ID</label>
         <input class="form-control" type="text" name="id" id="id" placeholder="Document ID">
