Create about and footer

--- a/src/righter/web/static/index.html
+++ b/src/righter/web/static/index.html
@@ -21,7 +21,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/static/about.html">About</a></li>
         </ul>
       </div>
     </div>
@@ -100,5 +100,14 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container">
+      <p class="row">This is an non-commercial proof-of-concept. It exists only to illustrate
+      the difference between both commercial and free algorithms.</p>
+
+      <p class="row">Any questions or concerns should be sent to: tatiana.alchueyr(at)ef.com
+      and/or rafael.almeida(at)ef.com.</p>
+    </div>
+  </footer>
 </body>
 </html>
