--- a/src/righter/web/static/about.html
+++ b/src/righter/web/static/about.html
@@ -16,12 +16,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Righter</a>
+        <a class="navbar-brand" href="/">Righter</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="#">About</a></li>
         </ul>
       </div>
     </div>
@@ -36,7 +36,7 @@
     <p>We have researched the market for good essay assessment solutions. While
     many exist (even free ones like <a
     href="https://www.languagetool.org/">Language Tools</a> and <a
-    href="https://pypi.python.org/pypi/grammar-check">Grammar Check</a>), none
+    href="http://pythonhosted.org/pyenchant/">Pyenchant</a>), none
     quite fitted the bill. We hope to improve upon the ideas used on those
     solutions and, ultimately, develop a new &mdash; and hopefully more powerful
     &mdash; tool for the Pythonist toolbelt.</p>
@@ -49,6 +49,22 @@
     Feel free to drop by and open issues with bugs and suggestions. Pull
     requests are also very much welcomed.</p>
 
+    <h2>Disclaimer</h2>
+
+    <p>This is an non-commercial proof-of-concept. It exists only to illustrate
+    the difference between both commercial and free algorithms.</p>
+
+    <p>Any questions or concerns should be sent to: tatiana.alchueyr(at)ef.com
+    and/or rafael.almeida(at)ef.com.</p>
   </div>
+  <footer>
+    <div class="container">
+      <p class="row">This is an non-commercial proof-of-concept. It exists only to illustrate
+      the difference between both commercial and free algorithms.</p>
+
+      <p class="row">Any questions or concerns should be sent to: tatiana.alchueyr(at)ef.com
+      and/or rafael.almeida(at)ef.com.</p>
+    </div>
+  </footer>
 </body>
 </html>
