Fix a few texts

--- a/src/righter/web/static/about.html
+++ b/src/righter/web/static/about.html
@@ -29,12 +29,13 @@
   <div class="container">
     <h1>About</h1>
 
-    <p class="lead">Righter is a free Python library for correcting English texts. We aim to
-    write good, tested code. Ready to be embeded in educational and professional
-    applications.</p>
+    <p class="lead">Righter is a free open source Python library for
+    correcting English texts. It is currently under development, as a Proof
+    of Concept. We aim to use it, in future, embedded to education and
+    professional applications.</p>
 
-    <p>We have researched the market for good essay assessment solutions. While
-    many exist (even free ones like <a
+    <p>We have researched the market for good essay assessment solutions.
+    While many exist (even free ones like <a
     href="https://www.languagetool.org/">Language Tools</a> and <a
     href="http://pythonhosted.org/pyenchant/">Pyenchant</a>), none
     quite fitted the bill. We hope to improve upon the ideas used on those
