--- a/src/righter/web/static/index.html
+++ b/src/righter/web/static/index.html
@@ -56,8 +56,7 @@
           <option value="pyenchant">Pyenchant</option>
           <option value="whitesmoke">Whitesmoke</option>
         </select>
-        <label for="id">Document ID</label>
-        <input class="form-control" type="text" name="id" id="id" placeholder="Document ID">
+        <div style="display:none" id="id"></div>
         <label for="text-entry">Text</label>
         <textarea id="text-entry" class="form-control" rows="10" placeholder="Type in your text ..."></textarea>
         <button type="submit" class="btn btn-primary">
