Fix bug where overlapping errors could break one another

--- a/src/righter/web/static/index.html
+++ b/src/righter/web/static/index.html
@@ -30,9 +30,10 @@
     <div class="page-header">
       <h1>Righter Demo</h1>
 
-      <p class="lead">Righter is a free Python library for correcting English texts. We aim to
-      write good, tested code. Ready to be embeded in educational and professional
-      applications.</p>
+      <p class="lead">Righter is a free open source Python library for
+    correcting English texts. It is currently under development, as a Proof
+    of Concept. We aim to use it, in future, embedded to education and
+    professional applications.</p>
     </div>
 
     <div class="row">
