--- a/src/righter/web/static/index.html
+++ b/src/righter/web/static/index.html
@@ -56,11 +56,11 @@
         <label for="algorithm">Algorithm</label>
         <select class="form-control" id="algorithm">
           <option value="righter" selected>Righter</option>
-          <option value="ginger">Ginger</option>
-          <option value="grammarly">Grammarly</option>
           <option value="language-tool">Language Tool</option>
+          <option value="ginger">Proprietary 1</option>
+          <option value="grammarly">Proprietary 2</option>
+          <option value="whitesmoke">Proprietary 3</option>
           <option value="pyenchant">Pyenchant</option>
-          <option value="whitesmoke">Whitesmoke</option>
         </select>
         <input type="hidden" name="id" id="id">
         <label for="text-entry">Text</label>
